--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,6 @@
 }
 
 html {
-  transition: background-color 0.3s ease, color 0.3s ease;
+  padding-right: 0 !important;
+  overflow: auto !important;
 }
