--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import 'swiper/css';
+@import 'swiper/css/thumbs';
+@import 'swiper/css/free-mode';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
